--- a/OnlineTutor2/Views/SpellingTest/Details.cshtml
+++ b/OnlineTutor2/Views/SpellingTest/Details.cshtml
@@ -31,7 +31,6 @@
     </div>
 </div>
 
-
 <div class="row mb-4">
     <div class="col-md-3">
         <div class="card text-center">
@@ -70,7 +69,6 @@
         </div>
     </div>
 </div>
-
 
 <div class="card mb-4">
     <div class="card-header">
@@ -131,19 +129,27 @@
     </div>
 </div>
 
-
 <div class="card mb-4">
     <div class="card-header d-flex justify-content-between align-items-center">
         <h5 class="mb-0">
             <i class="fas fa-list"></i> Вопросы теста (@Model.Questions.Count)
         </h5>
-        <div class="btn-group" role="group">
-            <a asp-action="AddQuestion" asp-route-id="@Model.Id" class="btn btn-success btn-sm">
-                <i class="fas fa-plus"></i> Добавить вопрос
-            </a>
-            <a asp-action="ImportQuestions" asp-route-id="@Model.Id" class="btn btn-outline-success btn-sm">
-                <i class="fas fa-file-import"></i> Импорт из Excel
-            </a>
+        <div class="btn-group w-100" role="group">
+            <button type="button" class="btn btn-outline-secondary dropdown-toggle" data-bs-toggle="dropdown">
+                <i class="fas fa-ellipsis-v"></i>
+            </button>
+            <ul class="dropdown-menu">
+                <li><a asp-action="Edit" asp-route-id="@Model.Id" class="dropdown-item"><i class="fas fa-edit"></i> Редактировать</a></li>
+                <li><a asp-action="AddQuestion" asp-route-id="@Model.Id" class="dropdown-item"><i class="fas fa-plus"></i> Добавить вопрос</a></li>
+                <li><a asp-action="ImportQuestions" asp-route-id="@Model.Id" class="dropdown-item"><i class="fas fa-file-import"></i> Импорт</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a asp-action="Analytics" asp-route-id="@Model.Id" class="dropdown-item"><i class="fas fa-chart-bar"></i> Аналитика</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#"><i class="fas fa-copy"></i> Дублировать</a></li>
+                <li><a class="dropdown-item" href="#"><i class="fas fa-play"></i> Предварительный просмотр</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a asp-action="Delete" asp-route-id="@Model.Id" class="dropdown-item text-danger"><i class="fas fa-trash"></i> Удалить</a></li>
+            </ul>
         </div>
     </div>
     <div class="card-body">
@@ -221,7 +227,6 @@
     </div>
 </div>
 
-
 @if (Model.TestResults.Any())
 {
     <div class="card mb-4">
@@ -286,7 +291,6 @@
     </div>
 }
 
-
 <div class="modal fade" id="questionModal" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -338,40 +342,13 @@
     </div>
 </div>
 
-
-<div class="card-footer">
-    <div class="row">
-        <div class="col-md-6">
-            <div class="btn-group w-100" role="group">
-                <a asp-action="ImportQuestions" asp-route-id="@Model.Id" class="btn btn-success">
-                    <i class="fas fa-file-import"></i> Импорт вопросов
-                </a>
-                <a asp-action="AddQuestion" asp-route-id="@Model.Id" class="btn btn-outline-success">
-                    <i class="fas fa-plus"></i> Добавить вопрос
-                </a>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="btn-group w-100" role="group">
-                <a asp-action="Analytics" asp-route-id="@Model.Id" class="btn btn-info">
-                    <i class="fas fa-chart-bar"></i> Аналитика
-                </a>
-                <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary">
-                    <i class="fas fa-edit"></i> Редактировать
-                </a>
-                <button type="button" class="btn btn-outline-secondary dropdown-toggle" data-bs-toggle="dropdown">
-                    <i class="fas fa-ellipsis-v"></i>
-                </button>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#"><i class="fas fa-copy"></i> Дублировать</a></li>
-                    <li><a class="dropdown-item" href="#"><i class="fas fa-play"></i> Предварительный просмотр</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a asp-action="Delete" asp-route-id="@Model.Id" class="dropdown-item text-danger"><i class="fas fa-trash"></i> Удалить</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</div>
+@section Styles {
+    <style>
+        .btn-group {
+            max-width: 50px;
+        }
+    </style>
+}
 
 @section Scripts {
     <script src="~/js/layout.js" asp-append-version="true"></script>
