fix test layout

--- a/OnlineTutor2/Views/SpellingTest/Analytics.cshtml
+++ b/OnlineTutor2/Views/SpellingTest/Analytics.cshtml
@@ -299,7 +299,6 @@
         </div>
     </div>
 
-
     <div class="tab-pane fade" id="questions" role="tabpanel">
         <div class="mt-4">
             @foreach (var qa in Model.QuestionAnalytics)
@@ -315,11 +314,11 @@
                                     @qa.Question.WordWithGap
                                     @if (qa.IsMostDifficult)
                                     {
-                                        <span class="badge bg-danger ms-2">Самый сложный</span>
+                                        <span class="badge bg-danger ms-2">Ошибка</span>
                                     }
                                     @if (qa.IsEasiest)
                                     {
-                                        <span class="badge bg-success ms-2">Самый легкий</span>
+                                        <span class="badge bg-success ms-2">Верно</span>
                                     }
                                 </h6>
                                 <small class="text-muted">Правильный ответ: <strong>@qa.Question.CorrectLetter</strong> → @qa.Question.FullWord</small>
@@ -373,7 +372,6 @@
             }
         </div>
     </div>
-
 
     @if (Model.StudentsNotTaken.Any())
     {
