--- a/OnlineTutor2/Views/TestAnalytics/RegularTestAnalytics.cshtml
+++ b/OnlineTutor2/Views/TestAnalytics/RegularTestAnalytics.cshtml
@@ -350,7 +350,6 @@
         </div>
     </div>
 
-    
     <div class="tab-pane fade" id="questions" role="tabpanel">
         <div class="mt-4">
             @foreach (var qa in Model.QuestionAnalytics)
@@ -366,11 +365,11 @@
                                     @qa.Question.Text
                                     @if (qa.IsMostDifficult)
                                     {
-                                        <span class="badge bg-danger ms-2">Самый сложный</span>
+                                        <span class="badge bg-danger ms-2">Ошибка</span>
                                     }
                                     @if (qa.IsEasiest)
                                     {
-                                        <span class="badge bg-success ms-2">Самый легкий</span>
+                                        <span class="badge bg-success ms-2">Верно</span>
                                     }
                                 </h6>
                                 <small class="text-muted">
