--- a/OnlineTutor2/Views/TestAnalytics/SpellingAnalytics.cshtml
+++ b/OnlineTutor2/Views/TestAnalytics/SpellingAnalytics.cshtml
@@ -396,11 +396,11 @@
                                     <span class="word-display">@qa.Question.WordWithGap</span>
                                     @if (qa.IsMostDifficult)
                                     {
-                                        <span class="badge bg-danger ms-2">Самый сложный</span>
+                                        <span class="badge bg-danger ms-2">Ошибка</span>
                                     }
                                     @if (qa.IsEasiest)
                                     {
-                                        <span class="badge bg-success ms-2">Самый легкий</span>
+                                        <span class="badge bg-success ms-2">Верно</span>
                                     }
                                 </h6>
                                 <small class="text-muted">
