--- a/OnlineTutor2/Views/Shared/_Layout.cshtml
+++ b/OnlineTutor2/Views/Shared/_Layout.cshtml
@@ -69,7 +69,7 @@
                             {
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-controller="Student" asp-action="Index">
-                                        <i class="fas fa-user-graduate"></i> Класс
+                                        <i class="fas fa-user-graduate"></i> Кабинет
                                     </a>
                                 </li>
                                 <li class="nav-item dropdown">
