--- a/OnlineTutor2/Views/TestAnalytics/RegularTestAnalytics.cshtml
+++ b/OnlineTutor2/Views/TestAnalytics/RegularTestAnalytics.cshtml
@@ -8,6 +8,9 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item">
+                    <a asp-controller="Test" asp-action="Index">Тесты</a>
+                </li>
+                <li class="breadcrumb-item">
                     <a asp-controller="Test" asp-action="Details" asp-route-id="@Model.Test.Id">@Model.Test.Title</a>
                 </li>
                 <li class="breadcrumb-item active">Аналитика</li>
@@ -22,7 +25,6 @@
         </a>
     </div>
 </div>
-
 
 <div class="row mb-4">
     <div class="col-md-2">
@@ -80,7 +82,6 @@
         </div>
     </div>
 </div>
-
 
 <div class="card mb-4">
     <div class="card-header bg-info text-white">
