--- a/OnlineTutor2/Views/TestAnalytics/SpellingAnalytics.cshtml
+++ b/OnlineTutor2/Views/TestAnalytics/SpellingAnalytics.cshtml
@@ -8,6 +8,9 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item">
+                    <a asp-controller="Test" asp-action="Category" asp-route-id="1">Тесты на правописание</a>
+                </li>
+                <li class="breadcrumb-item">
                     <a asp-controller="SpellingTest" asp-action="Details" asp-route-id="@Model.Test.Id">@Model.Test.Title</a>
                 </li>
                 <li class="breadcrumb-item active">Аналитика</li>
