--- a/OnlineTutor2/Views/Teacher/Index.cshtml
+++ b/OnlineTutor2/Views/Teacher/Index.cshtml
@@ -74,7 +74,7 @@
             </div>
             <div class="card-body d-flex flex-column">
                 <p class="card-text">Загрузка и управление учебными материалами</p>
-                <a href="#" class="btn btn-primary mt-auto w-100">
+                <a asp-controller="Material" asp-action="Index" class="btn btn-primary mt-auto w-100">
                     <i class="fas fa-book"></i> Материалы
                 </a>
             </div>
