fix teacher layout

--- a/OnlineTutor2/Views/Shared/_Layout.cshtml
+++ b/OnlineTutor2/Views/Shared/_Layout.cshtml
@@ -50,15 +50,31 @@
                                                 <i class="fas fa-user-graduate"></i> Ученики
                                             </a>
                                         </li>
+                                        <li><hr class="dropdown-divider"></li>
                                         <li>
                                             <a class="dropdown-item" asp-controller="Test" asp-action="Index">
                                                 <i class="fas fa-tasks"></i> Тесты
                                             </a>
                                         </li>
-                                        <li><hr class="dropdown-divider"></li>
                                         <li>
                                             <a class="dropdown-item" asp-controller="Material" asp-action="Index">
                                                 <i class="fas fa-book"></i> Материалы
+                                            </a>
+                                        </li>
+                                        <li><hr class="dropdown-divider"></li>
+                                        <li>
+                                            <a href="#" class="dropdown-item">
+                                                <i class="fas fa-chart-line"></i> Успеваемость
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="dropdown-item">
+                                                <i class="fas fa-file-alt"></i> Отчеты
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="dropdown-item">
+                                                <i class="fas fa-calendar-alt"></i> Календарь
                                             </a>
                                         </li>
                                     </ul>
@@ -87,15 +103,15 @@
                                                 <i class="fas fa-chart-line"></i> Мой прогресс
                                             </a>
                                         </li>
-                                        <li>
-                                            <a class="dropdown-item" href="#">
-                                                <i class="fas fa-calendar-alt"></i> Расписание
-                                            </a>
-                                        </li>
                                         <li><hr class="dropdown-divider"></li>
                                         <li>
                                             <a class="dropdown-item" href="#">
                                                 <i class="fas fa-book"></i> Материалы
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" href="#">
+                                                <i class="fas fa-calendar-alt"></i> Расписание
                                             </a>
                                         </li>
                                     </ul>
