--- a/OnlineTutor2/Views/TestAnalytics/SpellingAnalytics.cshtml
+++ b/OnlineTutor2/Views/TestAnalytics/SpellingAnalytics.cshtml
@@ -494,7 +494,7 @@
                             <div class="text-center py-2">
                                 <i class="fas fa-check-circle text-success fa-2x"></i>
                                 <p class="text-success mt-2 mb-0">
-                                    <strong>Отлично!</strong> Все ученики ответили правильно или ошибки уникальны.
+                                    <strong>Отлично!</strong> Все ученики ответили правильно.
                                 </p>
                             </div>
                         </div>
