--- a/OnlineTutor2/Views/PunctuationTest/Take.cshtml
+++ b/OnlineTutor2/Views/PunctuationTest/Take.cshtml
@@ -181,7 +181,7 @@
                 animation: fadeIn 0.3s ease;
             }
 
-        @keyframes fadeIn {
+        @@keyframes fadeIn {
             from
 
         {
@@ -209,7 +209,7 @@
             animation: blink 1s infinite;
         }
 
-        @keyframes blink {
+        @@keyframes blink {
             0%, 50%
 
         {
