--- a/OnlineTutor2/Views/StudentTest/TakeSpelling.cshtml
+++ b/OnlineTutor2/Views/StudentTest/TakeSpelling.cshtml
@@ -142,7 +142,7 @@
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
                     <i class="fas fa-times"></i> Продолжить тест
                 </button>
-                <form asp-action="Complete" method="post" class="d-inline">
+                <form asp-action="CompleteSpelling" method="post" class="d-inline">
                     <input type="hidden" name="testResultId" value="@Model.TestResult.Id" />
                     <button type="submit" class="btn btn-success">
                         <i class="fas fa-check"></i> Завершить тест
@@ -393,11 +393,9 @@
         }
 
         function autoSubmitTest() {
-            testCompleting = true; // Устанавливаем флаг перед автоотправкой
+            testCompleting = true;
             alert('Время вышло! Тест будет автоматически завершен.');
-
-            // Находим форму завершения теста и отправляем её
-            $('form[action*="Complete"]').submit();
+            $('form[action*="CompletePunctuation"]').submit();
         }
 
         // Предотвращение случайного закрытия страницы
