fix student index

--- a/OnlineTutor2/Views/Student/Index.cshtml
+++ b/OnlineTutor2/Views/Student/Index.cshtml
@@ -11,7 +11,7 @@
                 </h5>
             </div>
             <div class="card-body d-flex flex-column">
-                <p class="card-text">Проходите тесты на правописание и проверяйте свои знания</p>
+                <p class="card-text">Проходите тесты на правописание, пунктуацию и проверяйте свои знания</p>
                 <a asp-controller="StudentTest" asp-action="Index" class="btn btn-primary mt-auto w-100">
                     <i class="fas fa-play"></i> Доступные тесты
                 </a>
