--- a/OnlineTutor2/Views/Shared/_Layout.cshtml
+++ b/OnlineTutor2/Views/Shared/_Layout.cshtml
@@ -93,18 +93,18 @@
                                     </a>
                                     <ul class="dropdown-menu">
                                         <li>
-                                            <a class="dropdown-item" href="#">
-                                                <i class="fas fa-clipboard-list"></i> Мои задания
+                                            <a class="dropdown-item" asp-controller="StudentTest" asp-action="Index">
+                                                <i class="fas fa-clipboard-list"></i> Мои тесты
                                             </a>
                                         </li>
                                         <li>
-                                            <a class="dropdown-item" href="#">
+                                            <a class="dropdown-item" asp-controller="StudentTest" asp-action="History">
                                                 <i class="fas fa-chart-line"></i> Мой прогресс
                                             </a>
                                         </li>
                                         <li><hr class="dropdown-divider"></li>
                                         <li>
-                                            <a class="dropdown-item" href="#">
+                                            <a class="dropdown-item" asp-controller="Material" asp-action="Index">
                                                 <i class="fas fa-book"></i> Материалы
                                             </a>
                                         </li>
