--- a/OnlineTutor2/Views/PunctuationTest/ImportQuestions.cshtml
+++ b/OnlineTutor2/Views/PunctuationTest/ImportQuestions.cshtml
@@ -96,14 +96,14 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td>Когда солнце взошло¹ птицы запели² а цветы раскрылись³ наступил новый день.</td>
-                                        <td>1,3</td>
+                                        <td>Когда солнце взошло(1) птицы запели(2) а цветы раскрылись(3) наступил новый день.</td>
+                                        <td>13</td>
                                         <td>Когда солнце взошло, птицы запели, а цветы раскрылись, наступил новый день.</td>
                                         <td>Запятые для выделения обстоятельств</td>
                                     </tr>
                                     <tr>
-                                        <td>Мария¹ которая работает учителем² очень любит детей.</td>
-                                        <td>1,2</td>
+                                        <td>Мария(1) которая работает учителем(2) очень любит детей.</td>
+                                        <td>12</td>
                                         <td>Мария, которая работает учителем, очень любит детей.</td>
                                         <td>Придаточное определительное</td>
                                     </tr>
@@ -118,8 +118,8 @@
                     <div class="alert alert-info">
                         <h6><i class="fas fa-lightbulb"></i> Важные моменты:</h6>
                         <ul class="mb-0">
-                            <li><strong>Символы номеров:</strong> ¹ ² ³ ⁴ ⁵ ⁶ ⁷ ⁸ ⁹ (скопируйте из шаблона)</li>
-                            <li><strong>Правильные позиции:</strong> укажите номера через запятую без пробелов (например: 1,3,5)</li>
+                            <li><strong>Символы номеров:</strong> (1) (2) (3) (4) (5) (6) (7) (8) (9) (скопируйте из шаблона)</li>
+                            <li><strong>Правильные позиции:</strong> укажите номера без пробелов и знаков препинания (например: 135)</li>
                             <li><strong>Если запятые не нужны:</strong> оставьте поле "Правильные позиции" пустым</li>
                             <li><strong>Предложение без номеров:</strong> для показа правильного варианта после теста</li>
                         </ul>
